package donjonDragon.entite;

import donjonDragon.De;

public class Monstre extends Entite
{
    private String m_espece;
    private String m_numero;
    private De m_degat;
    private int m_portee;
    
    public Monstre()
    {
    
    }
}
