package donjonDragon.entite;

public class Personnage extends Entite{
    private String m_nom;
    
    public Personnage()
    {
    
    }
}
