package donjonDragon.entite.classe;

public class Guerrier extends Classe
{
    public Guerrier()
    {
        m_pv = 20;
    }
}
