package donjonDragon.entite.race;

public class Nain extends Race
{
    public Nain()
    {
        m_force = 6;
    }
}
