package donjonDragon.equipement;

import donjonDragon.De;

public class Arme extends Equipement
{
    private String m_nom;
    private De m_degat;
    private int m_portee;
    
    public Arme()
    {
    
    }
}
