package donjonDragon.equipement;

public class Armure extends Equipement
{
    private m_nom;
    private int m_classeArmure;
    
    public Armure()
    {
    
    }
}
