package donjonDragon.equipement;

public abstract class Equipement
{
    protected boolean m_lourd;
}
