package entite;

public class Clerc extends Classe
{

}
