package entite;

public class Elfe extends Race
{

}
