package entite;

public class Humain extends Race
{

}
