package entite;

public class Roublard extends Classe
{

}
